--- a/src/EurovisionTotalizer.API/Views/Shared/_Layout.cshtml
+++ b/src/EurovisionTotalizer.API/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             <nav class="sidebar-nav">
                 <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                 <a asp-controller="DataEntry" asp-action="DataEntry" class="nav-link">Duomenų įvedimas</a>
-                <a asp-controller="Home" asp-action="Predictions" class="nav-link">Spėjimų lentelės</a>
+                <a asp-controller="Predictions" asp-action="Predictions" class="nav-link">Spėjimų lentelės</a>
                 <a asp-controller="Home" asp-action="Leaderboard" class="nav-link">Leaderboradas</a>
             </nav>
         </aside>
