--- a/src/EurovisionTotalizer.API/Views/Predictions/Predictions.cshtml
+++ b/src/EurovisionTotalizer.API/Views/Predictions/Predictions.cshtml
@@ -1,6 +1,6 @@
 ﻿@using EurovisionTotalizer.API.Views
 @using EurovisionTotalizer.Domain.Enums
-@model EurovisionTotalizer.API.ViewModels.DataEntryViewModel
+@model EurovisionTotalizer.API.ViewModels.RepositoriesViewModel
 
 @{
     ViewBag.Title = "Spėjimų lentelės";
