--- a/src/EurovisionTotalizer.API/Views/Shared/_Layout.cshtml
+++ b/src/EurovisionTotalizer.API/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                 <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                 <a asp-controller="DataEntry" asp-action="DataEntry" class="nav-link">Duomenų įvedimas</a>
                 <a asp-controller="Predictions" asp-action="Predictions" class="nav-link">Spėjimų lentelės</a>
-                <a asp-controller="Home" asp-action="Leaderboard" class="nav-link">Leaderboradas</a>
+                <a asp-controller="Leaderboard" asp-action="Leaderboard" class="nav-link">Leaderboards</a>
             </nav>
         </aside>
 
