--- a/src/EurovisionTotalizer.API/Views/DataEntry/DataEntry.cshtml
+++ b/src/EurovisionTotalizer.API/Views/DataEntry/DataEntry.cshtml
@@ -1,4 +1,4 @@
-﻿@model EurovisionTotalizer.API.ViewModels.DataEntryViewModel
+﻿@model EurovisionTotalizer.API.ViewModels.RepositoriesViewModel
 @{
     ViewBag.Title = "Duomenų įvedimas";
     Layout = "~/Views/Shared/_Layout.cshtml";
