--- a/src/EurovisionTotalizer.API/Views/DataEntry/DataEntry.cshtml
+++ b/src/EurovisionTotalizer.API/Views/DataEntry/DataEntry.cshtml
@@ -27,7 +27,7 @@
                 }
                 @foreach (var c in Model.Countries)
                 {
-                    <li>Šalis: @c.Name - @c.SemiFinal</li>
+                    <li>Šalis: @c.Name - @c.SemiFinal - @c.IsInFinal - @c.PlaceInFinal </li>
                 }
             </ul>
         </div>
